--- a/templates/wit/index.html
+++ b/templates/wit/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>hello</title>
-    <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}" />
+    <link rel="stylesheet" type="text/css" href="{% static 'js/react/react.js' %}" />
 </head>
 <body>
 
