--- a/templates/wit/index.html
+++ b/templates/wit/index.html
@@ -4,7 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <title>hello</title>
-    <link rel="stylesheet" type="text/css" href="{% static 'js/react/react.js' %}" />
+    <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}" />
+    <script type="application/javascript" src="{% static 'js/react/react.js' %}"></script>
+    <script type="application/javascript" src="{% static 'js/jq/jquery-3.1.1.js' %}"></script>
 </head>
 <body>
 
