--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,8 @@
-li a {
-    color: green;
+body {
+    padding-top: 50px;
+}
+
+.starter-template {
+    padding: 40px 15px;
+    text-align: center;
 }
